--- a/server/src/yolo_security/yolo_home_security.html
+++ b/server/src/yolo_security/yolo_home_security.html
@@ -10,6 +10,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+   <style>
+       img {
+           width: 100%;
+       }
+   </style>
 
 </head>
 
@@ -28,9 +33,8 @@
         </nav>
         <div class="container">
             <div class="page-header">
-                <h1>oZone Server Framework live example</h1>
+                <h1>YOLOv3 Home Security</h1>
             </div>
-
 
             <div class="alert alert-info" role="alert">
                 <span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Live RTSP feeds, auto-converted to MJPEG for browser display, along with live motion tracking
@@ -40,13 +44,13 @@
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-success figure-caption text-xs-right">SouthEast Camera: Live Feed</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/watch/southeast" />
+                        <img class="figure-img img-fluid" src="{{rawurl}}/watch/southeast" />
                     </figure>
                 </div>
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">SouthWest Camera: Live Feed</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/watch/southwest" />
+                        <img class="figure-img img-fluid" src="{{rawurl}}/watch/southwest" />
                     </figure>
                 </div>
             </div>
@@ -55,13 +59,13 @@
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-success figure-caption text-xs-right">Object detection on SouthEast Camera</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/detect/yolo_southeast" />
+                        <img class="figure-img img-fluid" src="{{detecturl}}/detect/yolo_southeast" />
                     </figure>
                 </div>
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">Object detection on SouthWest Camera</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/detect/yolo_southwest" />
+                        <img class="figure-img img-fluid" src="{{detecturl}}/detect/yolo_southwest" />
                     </figure>
                 </div>
             </div>
@@ -69,13 +73,13 @@
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">Back Patio Camera: Live Feed</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/watch/backpatio" />
+                        <img class="figure-img img-fluid" src="{{rawurl}}/watch/backpatio" />
                     </figure>
                 </div>
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">Front Entry Camera: Live Feed</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/watch/frontentry" />
+                        <img class="figure-img img-fluid" src="{{rawurl}}/watch/frontentry" />
                     </figure>
                 </div>
             </div>
@@ -83,13 +87,13 @@
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">Object detection on Back Patio Camera</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/detect/yolo_backpatio" />
+                        <img class="figure-img img-fluid" src="{{detecturl}}/detect/yolo_backpatio" />
                     </figure>
                 </div>
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-success figure-caption text-xs-right">Object detection on Front Entry Camera</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/detect/yolo_frontentry" />
+                        <img class="figure-img img-fluid" src="{{detecturl}}/detect/yolo_frontentry" />
                     </figure>
                 </div>
             </div>
@@ -97,13 +101,13 @@
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">Office Camera: Live Feed</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/watch/office" />
+                        <img class="figure-img img-fluid" src="{{rawurl}}/watch/office" />
                     </figure>
                 </div>
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">NorthWest Camera: Live Feed</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/watch/northwest" />
+                        <img class="figure-img img-fluid" src="{{rawurl}}/watch/northwest" />
                     </figure>
                 </div>
             </div>
@@ -111,13 +115,13 @@
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">Object detection on Office Camera</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/detect/yolo_office" />
+                        <img class="figure-img img-fluid" src="{{detecturl}}/detect/yolo_office" />
                     </figure>
                 </div>
                 <div class="col-sm-6">
                     <figure class="figure">
                         <figcaption class="bg-info figure-caption text-xs-right">Object detection on NorthWest Camera</figcaption>
-                        <img class="figure-img img-fluid" src="{{baseurl}}/detect/yolo_northwest" />
+                        <img class="figure-img img-fluid" src="{{detecturl}}/detect/yolo_northwest" />
                     </figure>
                 </div>
             </div>
@@ -128,8 +132,9 @@
     angular.module('starter', [])
    .controller('starterController', function($scope) {
         // change the IP address to point to your system
-       $scope.baseurl = "http://10.10.10.10:9292";
-       $scope.w = "2400px";
+       $scope.detecturl = "http://10.10.10.10:9293";
+       $scope.rawurl = "http://10.10.10.10:9292";
+       $scope.w = "1200px";
 });
 
     </script>
